# serial-test

./: .gitignore  README  README.md  serial_test.py
firmware/hal-cdc-test/src/: .directory  CMakeLists.txt
firmware/hal-cdc-test/src/application/: CMakeLists.txt  application.h  main.c
firmware/hal-cdc-test/src/bsp/: board_lp5529.h
firmware/hal-cdc-test/src/hal-uc/: hal_uc_uart.h  hal_uc_usb.h
firmware/hal-cdc-test/src/subsystem/: bc_iface.h  subsystems.h
firmware/hal-cdc-test/src/uc-impl/: usbcdc_impl.h
firmware/hal-cdc-test/src/uc-impl/usb-impl/: descriptors.h  usb_event_handlers.c  usb_irq_handler.c
firmware/hal-cdc-test/src/uc-impl/usb-impl/USB_API/USB_CDC_API/: usbcdc.c  usbcdc.h  usbcdc_event_handlers.h
firmware/hal-cdc-test/src/uc-impl/usb-impl/USB_API/USB_Common/: usb.c
firmware/hal-cdc-test/src/uc-impl/usb-impl/info/: README.md
firmware/hal-uart-test/src/: CMakeLists.txt
firmware/hal-uart-test/src/application/: CMakeLists.txt  application.h  main.c
firmware/hal-uart-test/src/bsp/: uc_pum_lp5529.h
firmware/hal-uart-test/src/subsystem/: bc_iface.h
software/: serial_test.py
src/: prbs.i
